Membuat navbar dan styling

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
       <!-- <button id="skip-link" class="skip-link">Skip to Content</button> -->
       <div class="main-header container">
         <div class="icon">
-          <a class="brand-name" href="#/"
-            ><i class="fas fa-book-reader"></i>DepPredict</a
-          >
+          <a class="brand-name" href="#/">DepPredict</a>
         </div>
         <nav id="navigation-drawer" class="navigation-drawer">
           <ul id="nav-list" class="nav-list">
@@ -33,8 +31,10 @@
 
     <main id="main-content" class="main-content"></main>
 
-    <footer>
-      <p>&copy; 2025 DepPredict - Ikhsan and others</p>
+    <footer class="footer">
+      <div class="container">
+        <p>&copy; <span id="footer-year"></span>StoryApp by Ikhsan Asagaf</p>
+      </div>
     </footer>
   </body>
   <!-- Font Awesome -->
