--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,7 @@
       </nav>
     </header>
 
-    <main id="main-content" class="main-content" style="padding-top: 70px;">
-      </main>
+    <main id="main-content" class="main-content" style="padding-top: 65px;"></main>
 
     <footer class="footer bg-dark p-3 mt-auto">
       <div class="container">
@@ -71,4 +70,9 @@
       </div>
     </footer>
   </body>
+  <!-- Font Awesome -->
+  <script
+    src="https://kit.fontawesome.com/eff3ff321f.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
