Menambah halaman predict dan membuat login

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,8 @@
       >
         <div class="container">
           <a class="navbar-brand fw-bold fs-4" href="#/">
-            <span style="color: #104f1f">Dep</span><span
-              style="color: #6ebe77"
-              >Predict</span
-            >
+            <span style="color: #104f1f">Dep</span
+            ><span style="color: #6ebe77">Predict</span>
           </a>
           <button
             class="navbar-toggler"
@@ -34,6 +32,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bold">
               <li class="nav-item">
@@ -45,13 +44,22 @@
               <li class="nav-item">
                 <a class="nav-link fs-6" href="#/predict">Predict</a>
               </li>
-              </ul>
+              <li class="nav-item ms-lg-2 mt-1">
+                <a href="#/login" class="btn btn-success btn-sm fw-bold">
+                  <i class="fa-solid fa-right-to-bracket" style="margin-right: 7px;"></i>Login
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <main id="main-content" class="main-content" style="padding-top: 65px;"></main>
+    <main
+      id="main-content"
+      class="main-content"
+      style="padding-top: 65px"
+    ></main>
 
     <footer class="footer bg-dark p-3 mt-auto">
       <div class="container">
@@ -60,8 +68,7 @@
             class="col-md-6 text-center text-md-start mb-2 mb-md-0"
             style="color: #d3ffdc"
           >
-            &copy; Copyright 2025 | DepPredict. All
-            Rights Reserved
+            &copy; Copyright 2025 | DepPredict. All Rights Reserved
           </div>
           <div class="col-md-6 text-center text-md-end" style="color: #d3ffdc">
             Created by CC25-CF325
