Menghubungkan Front-End dengan Back-End untuk proses Login dan menambah beberapa logika sederhana

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,7 @@
                 <a class="nav-link fs-6" href="#/predict">Predict</a>
               </li>
               <li class="nav-item ms-lg-2 mt-1">
-                <a href="#/login" class="btn btn-success btn-sm fw-bold">
-                  <i class="fa-solid fa-right-to-bracket" style="margin-right: 7px;"></i>Login
-                </a>
+                <div id="auth-button-container" class="nav-item ms-lg-2"></div>
               </li>
             </ul>
           </div>
