--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DepPredict - Prediksi Sekarang!</title>
     <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="manifest" href="app.webmanifest"/>
   </head>
   <body>
     <div class="bg-loader">
